# toonconv

./: .gitignore  AGENTS.md  BENCHMARK.md  BUILD.md  Cargo.toml  LICENSE  README.md  USAGE_GUIDE.md
.github/workflows/: release.yml
bench/: speed.js
benches/: conversion_bench.rs  simd_eval.rs  speed_comparison.rs  token_count_bench.rs  token_efficiency.rs
examples/: complex_nested.json  serde_infty.rs
src/: lib.rs  main.rs
src/cli/: mod.rs  path_mapping.rs
src/conversion/: batch.rs  config.rs  engine.rs  limits.rs  memory_opt.rs  mod.rs  stats.rs
src/error/: mod.rs
src/formatter/: mixed_arrays.rs  mod.rs  nested.rs  quotes.rs  schema.rs
src/parser/: directory.rs  filter.rs  mod.rs  recursive.rs  validation.rs
src/validation/: circular_refs.rs  mod.rs  toon_compliance.rs
tests/fixtures/: edge_cases.json
tests/fixtures/encode/: arrays-nested.json  arrays-primitive.json  arrays-tabular.json  objects.json  primitives.json
tests/integration/: complex_test.rs  continue_error_test.rs  directory_test.rs  edge_case_fixtures_test.rs  file_test.rs  full_test_suite.rs  phase5_directory_test.rs  spec_fixtures_test.rs  stdin_test.rs  toon_spec_compliance_test.rs  usability_test.rs
tests/performance/: complex_bench.rs  directory_bench.rs  file_bench.rs  regression_bench.rs  string_bench.rs
tests/unit/: arrays_tabular_test.rs  complex_conversion.rs  directory_conversion.rs  file_conversion.rs  quotes_test.rs  string_conversion.rs
